commit db-center and gateway-service

--- a/base-services/pom.xml
+++ b/base-services/pom.xml
@@ -37,6 +37,8 @@
 
     <modules>
         <module>/euraka-service</module>
+        <module>gateway-service</module>
+        <module>db-center</module>
     </modules>
 
     <properties>
