--- a/base-services/db-center/src/main/resources/application.yml
+++ b/base-services/db-center/src/main/resources/application.yml
@@ -1,10 +1,6 @@
-spring:
-  application:
-    name: service-registry
-
 # Define the port where the Service Registry server would be running
 server:
-  port: 8761
+  port: 7777
 
 # Defines the Eureka server that is used by the Netflix OSS components to use as the registry
 # for server discovery
@@ -17,17 +13,23 @@ mybatis:
   mapper-locations: mybatis/mapper/**/*.xml
 
 spring:
+  application:
+    name: service-registry
   datasource:
     test1:
-      driverClassName: com.mysql.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/test1?useUnicode=true&characterEncoding=utf-8
+      driverClassName: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://localhost:3306/test1?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false
       username: root
       password: root
-spring:
-  datasource:
-    test2:
+    beichuan:
       driverClassName: oracle.jdbc.driver.OracleDriver
       url: jdbc:oracle:thin:@127.0.0.1:1521:beichuan
       username: root
       password: root
+test1:
+  basePackages: com.kwantler.mapper.test1
+  locationPattern: classpath:mybatis/mapper/test1/*.xml
+beichuan:
+  basePackages: com.kwantler.mapper.beichuan
+  locationPattern: classpath:mybatis/mapper/test1/*.xml
 
