删除其他无用文件

--- a/base-services/pom.xml
+++ b/base-services/pom.xml
@@ -39,6 +39,7 @@
         <module>/euraka-service</module>
         <module>gateway-service</module>
         <module>db-center</module>
+        <module>db-dynamic-center</module>
     </modules>
 
     <properties>
