--- a/info-service/userManager/user-manager-service/pom.xml
+++ b/info-service/userManager/user-manager-service/pom.xml
@@ -17,6 +17,10 @@
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka</artifactId>
         </dependency>
         <dependency>
